corrected patch to perl (not bash)

--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.136 2005/01/25 06:12:38 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.137 2005/01/25 18:54:00 tom_kelly33 Exp $
 #
 
 use strict;
@@ -1008,8 +1008,8 @@ MAIN: {
 #		keyboard::write(keyboard::lang2keyboard($o_keyboard));
 #	}
 
-	ln -sf /var/lib/xkb /usr/X11R6/lib/X11/xkb/compiled
-	ln -sf /var/lib/xdm /usr/X11R6/lib/X11/xdm/authdir
+	eval {`ln -sf /var/lib/xkb /usr/X11R6/lib/X11/xkb/compiled`};
+	eval {`ln -sf /var/lib/xdm /usr/X11R6/lib/X11/xdm/authdir`};
 
 	create_compressed();
 	create_isolinux();
