--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -23,7 +23,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.150 2005/02/14 06:56:35 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.151 2005/02/17 15:07:25 tom_kelly33 Exp $
 #
 
 use strict;
@@ -560,7 +560,7 @@ sub hwdetect_getsata() {
 	}
 	my @satalist = qw(libata sd_mod ata_piix scsi_mod sr_mod sg a100u2w 
 		advansys aha152x aha1542 aic7xxx BusLogic fdomain gdth 
-		megaraid sata_promise sata_sil sata_svw sata_via sata_vsc);
+		megaraid sata_nv sata_promise sata_sil sata_svw sata_via sata_vsc);
 
 	print getStr('mod_loaded') . ": ";	
 	foreach $sata (@satalist) {
