--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.143 2005/03/03 16:34:27 tom_kelly33 Exp $
+# $Id: mklivecd.in,v 1.144 2005/06/19 15:33:17 tom_kelly33 Exp $
 #
 
 use strict;
@@ -64,8 +64,6 @@ my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tm
 my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$ ^/var/run/ ^/var/lock/subsys/';
 my $loopmod        = undef;
 my $loopcmp        = undef;
-my $cow		   = undef;
-my $cowmod	   = "3rdparty/cowloop/cowloop";
 my $blocksize      = 32;
 my $finaliso       = "livecd.iso";
 my $md5sum	   = undef;
@@ -152,9 +150,6 @@ Image generation:
    --kernel <kernel>               Kernel to use as default for the LiveCD
                                    image. (Output of uname -r)
                                    (default: $o_kernel)
-   --cow			   Enable experimental cow filesystem. 
-                                   Currently this option enables overlay 
-                                   filesystem support.
 
 Compression options:
    --blocksize <size>              Compression (if used) blocksize in K 
@@ -395,7 +390,6 @@ sub parse_options {
 		'sort=s',
 		'kernel=s',
 		'lowmem',
-		'cow',
 		'looptype=s',
 		'blocksize=i',
 		'bootopt=s@',
@@ -608,7 +602,6 @@ sub create_initrd {
 	# get our modules
 	my @allmods = split(/ /, $modules);
 	push @allmods, $loopmod if (defined($loopmod));
-	push @allmods, $cowmod if (defined($cow));
 	my @allmods_opt = split(/ /, $modules_opt);
 
 	# start progress bar
@@ -649,12 +642,6 @@ sub create_initrd {
 #	do_copy($o_root."lib/libm.so.6",	    0, "$dir/lib",		       ++$pos);
 	do_copy($o_root."lib/ld-linux.so.2",        0, "$dir/lib",                     ++$pos);
 #	do_copy("/usr/sbin/lufsd.livecdfs",       755, "$dir/usr/sbin/lufsd.livecdfs", ++$pos) if (defined($opts{cow}));
-	if (defined($opts{cow})) {
-		print "Cow opts \n";
-		do_cmd("mknod $dir/dev/cowloop b 241 0", ++$pos);
-		do_cmd("mkdir $dir/cow", ++$pos);
-	
-	}
 	if ($kernel26 == 1) {
 		# Copy but hide the udev binaries
 		do_cmd("mkdir $dir/sbin/tmp",			++$pos);
@@ -705,7 +692,7 @@ sub create_initrd {
 					$opt = "$opt$modext";
 					$modopt = 1 if ($opt =~ m/$mod/);
 				}
-				die_("\nFATAL: unable to find kernel module '$mod'\n") unless (defined($modopt));
+				die_("\nFATAL: unable to find kernel module '$mod'\n") unless (defined($modopt) || $mod=~'cdrom');
 				set_progress(++$pos, $modpath);
 			}
 		}
@@ -892,6 +879,9 @@ sub create_isolinux {
 	print CFG "label livecd\n";
 	print CFG "    kernel vmlinuz\n";
 	print CFG "    append livecd=livecd $appopt\n";
+	print CFG "label safeboot\n";
+	print CFG "    kernel vmlinuz\n";
+	print CFG "    append livecd=livecd initrd=initrd.gz root=/dev/rd/3 acpi=off vga=normal keyb=us noapic nolapic noscsi nopcmcia nomce unionfs=no\n";
 	print CFG "label initrd\n";
 	print CFG "    kernel vmlinuz\n";
 	print CFG "    append livecd=initrd $appopt\n";
